--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,4 +3,5 @@
   border-bottom: 5px solid $white;
   text-align: center;
   padding: 25px 0 125px 0;
+  width: 100%;
 }
