--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,3 +1,7 @@
+main {
+  width: 100%;
+}
+
 .rules {
   margin: -100px 0 25px 0;
 
